# aquila

./: .env  .env-example  .gitignore  Cargo.toml  Dockerfile  README.md  action.configuration.json  aquila.yml  build.gradle.kts  docker-compose.yml  micronaut-cli.yml  renovate.json  service.configuration.json  settings.gradle.kts
.github/workflows/: build-and-test.yml  ci.yml
aquila/: Cargo.toml
aquila/src/: main.rs
aquila/src/client/sagittarius/: action_client.rs  flow_client.rs  mod.rs
aquila/src/configuration/: config.rs  environment.rs  mod.rs  mode.rs  start_configuration.rs
aquila/src/server/action/: action_server.rs  mod.rs
aquila/src/service/: action_service.rs  mod.rs
aquila_cache/: Cargo.toml
aquila_cache/src/: lib.rs
aquila_container/: Cargo.toml
aquila_container/src/: lib.rs
aquila_grpc/: Cargo.toml
aquila_grpc/src/: lib.rs
aquila_queue/: Cargo.toml
aquila_queue/src/: lib.rs
aquila_store/: Cargo.toml
aquila_store/src/: lib.rs
configuration/: configuration.json
docs/: dev.md  index.mdx  installation.mdx  meta.json  setup.mdx  starlight.json
docs/Guides/: dev.md  setup.md
docs/content/: index.mdx
docs/content/Guides/: dev.md  setup.md
docs/content/dev/: dev.md
docs/content/setup/: setup.md
flow/: test_flow_one.json
gradle/wrapper/: gradle-wrapper.properties
src/: .env  main.rs
src/authorization/: mod.rs
src/client/: action_client.rs  flow_client.rs  mod.rs
src/client/sagittarius/: action_client.rs  flow_client.rs
src/configuration/: action.rs  config.rs  configuration.rs  env.rs  environment.rs  mod.rs  mode.rs  service.rs  start_configuration.rs  state.rs
src/data/: mod.rs
src/data/rabbitmq/: mod.rs
src/data/redis/: mod.rs
src/endpoint/: action_endpoint.rs  configuration_endpoint.rs  flow_endpoint.rs  mod.rs
src/env/: mod.rs
src/flow/: mod.rs
src/main/java/tech/code0/: AquilaServer.java  Main.java
src/main/java/tech/code0/util/: AquilaLogger.java
src/main/proto/: configuration.proto  flow.proto  node.proto  parameter.proto  rule.proto  type.proto  variable.proto
src/main/resources/: application.properties  logback.xml  micronaut-banner.txt
src/rabbitmq/: mod.rs
src/sagittarius/: action_configuration_service_client_impl.rs  action_service_client_impl.rs  data_type_service_client_impl.rs  flow_service_client_impl.rs  flow_type_service_client_impl.rs  function_service_client_impl.rs  mod.rs  module_service_client_impl.rs  retry.rs  runtime_function_service_client_impl.rs  runtime_status_service_client_impl.rs  runtime_usage_client_impl.rs  test_execution_client_impl.rs
src/server/: action_configuration_service_server_impl.rs  action_transfer_service_server_impl.rs  data_type_service_server_impl.rs  dynamic_server.rs  flow_type_service_server_impl.rs  function_service_server_impl.rs  interceptor.rs  mod.rs  module_service_server_impl.rs  runtime_execution_service_server_impl.rs  runtime_function_service_server_impl.rs  runtime_status_service_server_impl.rs  runtime_usage_service_server_impl.rs  static_server.rs
src/server/action/: action_server.rs
src/service/: action_service.rs  flow_service.rs  mod.rs
src/startup/: dynamic_mode.rs  mod.rs  static_mode.rs
src/stream/: mod.rs
src/telemetry/: errors.rs  metrics.rs  mod.rs
src/test/java/tech/code0/: AquilaTestConfig.java
(+11 files in other folders)
