[package]
name = "aquila"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["rt-multi-thread", "signal"] }
futures = "0.3.31"
log = "0.4.26"
env_logger = "0.11.8"
prost = "0.14.1"
tonic = "0.14.1"
tucana = { version = "0.0.54", features = ["all"] }
code0-flow = { version = "0.0.26", features = ["flow_health"] }
serde_json = "1.0.140"
async-nats = "0.46.0"
tonic-health = "0.14.1"
tokio-stream = "0.1.17"
uuid = { version = "1.18.0", features = ["v4"] }
serde = "1.0.228"
futures-core = "0.3.32"
