[package]
name = "aquila"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["rt-multi-thread", "signal"] }
futures = "0.3.31"
log = "0.4.26"
opentelemetry = { version = "0.32.0", features = ["logs", "metrics", "trace"] }
opentelemetry-appender-tracing = "0.32.0"
opentelemetry-otlp = { version = "0.32.0", features = ["grpc-tonic", "logs", "metrics", "trace"] }
opentelemetry_sdk = { version = "0.32.1", features = ["logs", "metrics", "rt-tokio", "trace"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
prost = "0.14.1"
tonic = "0.14.1"
tucana = { version = "0.0.75", features = ["all"] }
code0-flow = { version = "0.0.38", features = ["flow_health"] }
serde_json = "1.0.140"
async-nats = "0.49.0"
tonic-health = "0.14.1"
tokio-stream = "0.1.17"
uuid = { version = "1.18.0", features = ["v4"] }
serde = "1.0.228"
futures-core = "0.3.32"
config = "0.15.25"
