[package]
name = "aquila"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["rt-multi-thread", "signal"] }
futures = "0.3.31"
log = "0.4.26"
opentelemetry = { version = "0.32.0", features = ["metrics"] }
tracing = { version = "0.1.41", features = ["log"] }
prost = "0.14.1"
tonic = "0.14.1"
tucana = { version = "0.0.75", features = ["all"] }
code0-flow = { version = "0.0.41", features = ["flow_config", "flow_health", "flow_telemetry"] }
serde_json = "1.0.140"
async-nats = "0.49.0"
tonic-health = "0.14.1"
tokio-stream = "0.1.17"
uuid = { version = "1.18.0", features = ["v4"] }
serde = "1.0.228"
futures-core = "0.3.32"
config = "0.15.25"
