[package]
name = "aquila_store"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {workspace = true}
tucana = {workspace = true}
redis = {workspace = true}
async-trait = {workspace = true}
log = { workspace = true}
serde_json = { workspace = true }

[dev-dependencies]
aquila_container = {workspace = true}